test/e2e/suites/shared-appnetwork-ds/gateway.yaml
---
# Gateway BDS1 on VLAN 300 with shared dual-stack app-net-bds
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-bds1
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-bds1
  listeners:
  - name: default
    protocol: TCP
    port: 80
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-bds1
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: sysctl-tuning
      namespace: e2e-shared-appnetwork-ds
      interface: dummy
  - type: NAD
    nad:
      name: vlan-300
      namespace: e2e-shared-appnetwork-ds
      interface: vlan-300
  - type: NAD
    nad:
      name: app-net-bds
      namespace: e2e-shared-appnetwork-ds
      interface: net-bds
  internalSubnets:
  - attachmentType: NAD
    cidr: "169.111.20.0/24"
  - attachmentType: NAD
    cidr: "fd00:cafe:120::/64"
  horizontalScaling:
    replicas: 2
---
# Gateway BDS2 on VLAN 400 with shared dual-stack app-net-bds
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gw-bds2
spec:
  gatewayClassName: meridio
  infrastructure:
    parametersRef:
      group: meridio-2.nordix.org
      kind: GatewayConfiguration
      name: gwconfig-bds2
  listeners:
  - name: default
    protocol: TCP
    port: 80
---
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayConfiguration
metadata:
  name: gwconfig-bds2
spec:
  networkAttachments:
  - type: NAD
    nad:
      name: sysctl-tuning
      namespace: e2e-shared-appnetwork-ds
      interface: dummy
  - type: NAD
    nad:
      name: vlan-400
      namespace: e2e-shared-appnetwork-ds
      interface: vlan-400
  - type: NAD
    nad:
      name: app-net-bds
      namespace: e2e-shared-appnetwork-ds
      interface: net-bds
  internalSubnets:
  - attachmentType: NAD
    cidr: "169.111.20.0/24"
  - attachmentType: NAD
    cidr: "fd00:cafe:120::/64"
  horizontalScaling:
    replicas: 2
