test/e2e/suites/shared-appnetwork-ds/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

namespace: e2e-shared-appnetwork-ds

resources:
- ../../../../config/default

images:
- name: controller-manager
  newName: registry.nordix.org/cloud-native/meridio-2/controller-manager
  newTag: latest

nameSuffix: -shared-appnet-ds

labels:
- pairs:
    e2e-suite: shared-appnet-ds

patches:
- patch: |-
    apiVersion: admissionregistration.k8s.io/v1
    kind: ValidatingWebhookConfiguration
    metadata:
      name: not-important
      annotations:
        cert-manager.io/inject-ca-from: e2e-shared-appnetwork-ds/meridio-2-serving-cert-shared-appnet-ds
    webhooks:
    - name: vl34route-v1alpha1.kb.io
      namespaceSelector:
        matchLabels:
          e2e-suite: shared-appnet-ds
      clientConfig:
        service:
          name: meridio-2-webhook-service-shared-appnet-ds
          namespace: e2e-shared-appnetwork-ds
  target:
    kind: ValidatingWebhookConfiguration
- patch: |-
    - op: replace
      path: /spec/dnsNames
      value:
      - meridio-2-webhook-service-shared-appnet-ds.e2e-shared-appnetwork-ds.svc
      - meridio-2-webhook-service-shared-appnet-ds.e2e-shared-appnetwork-ds.svc.cluster.local
    - op: replace
      path: /spec/secretName
      value: webhook-server-cert-shared-appnet-ds
  target:
    group: cert-manager.io
    kind: Certificate
    name: serving-cert
- patch: |-
    apiVersion: apps/v1
    kind: Deployment
    metadata:
      name: not-important
    spec:
      template:
        spec:
          containers:
          - name: manager
            env:
            - name: MERIDIO_LB_SERVICE_ACCOUNT
              value: meridio-2-stateless-load-balancer-shared-appnet-ds
          volumes:
          - name: webhook-certs
            secret:
              secretName: webhook-server-cert-shared-appnet-ds
  target:
    kind: Deployment
    labelSelector: control-plane=controller-manager
