test/e2e/suites/shared-appnetwork-ds/routing.yaml
---
# gw-bds1 IPv4 router (VLAN 300, ASN 64514)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-bds1-router-v4
spec:
  gatewayRef:
    name: gw-bds1
  interface: "vlan-300"
  address: "169.254.20.150"
  protocol: "BGP"
  bgp:
    localASN: 64514
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
# gw-bds1 IPv6 router (VLAN 300, ASN 64514)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-bds1-router-v6
spec:
  gatewayRef:
    name: gw-bds1
  interface: "vlan-300"
  address: "fd00:cafe:20::150"
  protocol: "BGP"
  bgp:
    localASN: 64514
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
# Dual-stack L34Route for gw-bds1
apiVersion: meridio-2.nordix.org/v1alpha1
kind: L34Route
metadata:
  name: route-bds1
spec:
  parentRefs:
  - name: gw-bds1
  backendRefs:
  - group: meridio-2.nordix.org
    kind: DistributionGroup
    name: dg-bds1
  destinationCIDRs:
  - "20.0.0.1/32"
  - "fd00:cafe:2::1/128"
  protocols:
  - TCP
  - UDP
  destinationPorts:
  - "5000-5001"
  priority: 100
---
# gw-bds2 IPv4 router (VLAN 400, ASN 64515)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-bds2-router-v4
spec:
  gatewayRef:
    name: gw-bds2
  interface: "vlan-400"
  address: "169.254.21.150"
  protocol: "BGP"
  bgp:
    localASN: 64515
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
# gw-bds2 IPv6 router (VLAN 400, ASN 64515)
apiVersion: meridio-2.nordix.org/v1alpha1
kind: GatewayRouter
metadata:
  name: gw-bds2-router-v6
spec:
  gatewayRef:
    name: gw-bds2
  interface: "vlan-400"
  address: "fd00:cafe:21::150"
  protocol: "BGP"
  bgp:
    localASN: 64515
    remoteASN: 4200000000
    localPort: 10179
    remotePort: 10179
    holdTime: 24s
    bfd:
      minTx: 300ms
      minRx: 300ms
      multiplier: 3
---
# Dual-stack L34Route for gw-bds2
apiVersion: meridio-2.nordix.org/v1alpha1
kind: L34Route
metadata:
  name: route-bds2
spec:
  parentRefs:
  - name: gw-bds2
  backendRefs:
  - group: meridio-2.nordix.org
    kind: DistributionGroup
    name: dg-bds2
  destinationCIDRs:
  - "20.0.0.2/32"
  - "fd00:cafe:2::2/128"
  protocols:
  - TCP
  - UDP
  destinationPorts:
  - "5000-5001"
  priority: 100
